--- a/package.json
+++ b/package.json
@@ -53,13 +53,16 @@
     }
   },
   "dependencies": {
+    "@dejay/electron-google-oauth2": "^2.1.1",
     "axios": "^0.18.0",
     "buefy": "^0.8.10",
+    "dotenv": "^8.2.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "vuex-electron": "^1.0.0"
+    "vuex-electron": "^1.0.0",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "ajv": "^6.5.0",
@@ -78,9 +81,9 @@
     "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
-    "electron": "^2.0.4",
-    "electron-builder": "^20.19.2",
-    "electron-debug": "^1.5.0",
+    "electron": "^6.1.7",
+    "electron-builder": "^22.3.2",
+    "electron-debug": "^3.0.1",
     "electron-devtools-installer": "^2.2.4",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
