remove account button and get messages

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "axios": "^0.18.0",
     "buefy": "^0.8.10",
     "dotenv": "^8.2.0",
+    "js-base64": "^2.5.1",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
